[metadata]
name = blacs
description = Graphical labscript suite experiment queue and hardware interface
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/blacs
    Download=https://github.com/labscript-suite/blacs/releases
    Tracker=https://github.com/labscript-suite/blacs/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  importlib_metadata
  labscript_utils>=3.1.0b1
  runmanager>=3.0.0
  qtutils>=2.3.2
  setuptools_scm>=4.1.0
  zprocess>=2.14.1

[options.entry_points]
console_scripts =
  blacs = desktop_app:entry_point
gui_scripts = 
  blacs-gui = desktop_app:entry_point

[options.extras_require]
pyqt = PyQt5
docs = 
  PyQt5
  Sphinx==3.5.3
  sphinx-rtd-theme==0.5.2
  recommonmark==0.6.0
  m2r==0.2.1
